# frsky-svars

./: .gitmodules  CMakeLists.txt  FrSkySportDecoder.cpp  FrSkySportDecoder.h  FrSkySportPolling.cpp  FrSkySportPolling.h  FrSkySportSensor.cpp  FrSkySportSensor.h  FrSkySportSensorAss.cpp  FrSkySportSensorAss.h  FrSkySportSensorEsc.cpp  FrSkySportSensorEsc.h  FrSkySportSensorFcs.cpp  FrSkySportSensorFcs.h  FrSkySportSensorFlvss.cpp  FrSkySportSensorFlvss.h  FrSkySportSensorGps.cpp  FrSkySportSensorGps.h  FrSkySportSensorRpm.cpp  FrSkySportSensorRpm.h  FrSkySportSensorSp2uart.cpp  FrSkySportSensorSp2uart.h  FrSkySportSensorVario.cpp  FrSkySportSensorVario.h  FrSkySportSensorXjt.cpp  FrSkySportSensorXjt.h  FrSkySportSingleWireSerial.cpp  FrSkySportSingleWireSerial.h  FrSkySportTelemetry.cpp  FrSkySportTelemetry.h  README.md  changelog.txt  keywords.txt  library.properties
FrSkySportDecoderExample/: FrSkySportDecoderExample.ino
FrSkySportTelemetryExample/: FrSkySportTelemetryExample.ino
FrSkySportXjtDecoderExample/: FrSkySportXjtDecoderExample.ino
include/: smartport.hpp
include/frsky/: sport.hpp
src/: cli.cpp  endian.hpp  protocol.hpp  smartport.cpp  sport.cpp  tests.cpp
